Add FFI stubs and feature flags

--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -12,3 +12,9 @@ path = "src/lib.rs"
 [features]
 default = []
 
+# Target environment feature flags
+micropython = []
+cpython = []
+cm4 = []
+sim = []
+
