--- a/platform/Cargo.toml
+++ b/platform/Cargo.toml
@@ -18,8 +18,9 @@ rlvgl-core = { version = "0.1.5", path = "../core", default-features = false }
 embedded-hal = { version = "1.0", optional = true }
 display-interface = { version = "0.5", optional = true }
 display-interface-spi = { version = "0.5", optional = true }
-pixels = { version = "0.15", optional = true }
 winit = { version = "0.30.12", optional = true }
+wgpu = { version = "0.19", optional = true, features = ["wgsl"] }
+pollster = { version = "0.3", optional = true }
 eframe = { version = "0.27", default-features = false, features = ["glow"], optional = true }
 embedded-graphics = { version = "0.8", optional = true }
 bitflags = { version = "2", default-features = false }
@@ -30,7 +31,7 @@ stm32h7xx-hal = { version = "0.16", optional = true, features = ["stm32h747cm7"]
 
 [features]
 default = []
-simulator = ["pixels", "winit", "embedded-graphics", "eframe"]
+simulator = ["wgpu", "winit", "embedded-graphics", "eframe", "pollster"]
 st7789 = ["embedded-hal", "display-interface", "display-interface-spi"]
 stm32h747i_disco = ["stm32h7", "stm32h7xx-hal", "embedded-hal"]
 dma2d = ["stm32h7"]
