--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches:
       - main
+  push:
+    branches:
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -44,4 +47,16 @@ jobs:
           path: |
             target/thumbv7em-none-eabihf/release/rlvgl-stm32h747i-disco
             size.txt
+
+  polish:
+    if: github.event_name == 'push'
+    runs-on: ubuntu-latest
+    container:
+      image: docker.io/iraa/rlvgl:latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Prepare build environment
+        run: bash scripts/setup-ci-env.sh
+      - name: Run polish
+        run: bash scripts/pre-commit.sh
 
