--- a/platform/Cargo.toml
+++ b/platform/Cargo.toml
@@ -26,6 +26,7 @@ embedded-graphics = { version = "0.8", optional = true }
 image = { version = "0.24", default-features = false, features = ["png"], optional = true }
 bitflags = { version = "2", default-features = false }
 heapless = { version = "0.8", default-features = false }
+tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter", "fmt"] }
 [target.'cfg(any(target_arch = "arm", target_arch = "aarch64"))'.dependencies]
 stm32h7 = { version = "0.16", optional = true, features = ["stm32h747cm7", "rt"] }
 stm32h7xx-hal = { version = "0.16", optional = true, features = ["stm32h747cm7", "sdmmc"] }
@@ -33,7 +34,7 @@ cortex-m = { version = "0.7", optional = true, features = ["critical-section-sin
 
 [features]
 default = []
-simulator = ["wgpu", "winit", "embedded-graphics", "eframe", "pollster", "image"]
+simulator = ["wgpu", "winit", "embedded-graphics", "eframe", "pollster", "image", "tracing-subscriber"]
 st7789 = ["embedded-hal", "display-interface", "display-interface-spi"]
 stm32h747i_disco = ["stm32h7", "embedded-hal", "stm32h7xx-hal", "cortex-m", "rlvgl-core/fs"]
 dma2d = ["stm32h7"]
