--- a/platform/Cargo.toml
+++ b/platform/Cargo.toml
@@ -23,7 +23,7 @@ wgpu = { version = "0.19", optional = true, features = ["wgsl"] }
 pollster = { version = "0.3", optional = true }
 eframe = { version = "0.27", default-features = false, features = ["glow"], optional = true }
 embedded-graphics = { version = "0.8", optional = true }
-image = { version = "0.24", default-features = false, features = ["png"], optional = true }
+image = { version = "0.25", default-features = false, features = ["png"], optional = true }
 bitflags = { version = "2", default-features = false }
 heapless = { version = "0.8", default-features = false }
 tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter", "fmt"] }
@@ -35,8 +35,23 @@ cortex-m = { version = "0.7", optional = true, features = ["critical-section-sin
 
 [features]
 default = []
-simulator = ["wgpu", "winit", "embedded-graphics", "eframe", "pollster", "image", "tracing-subscriber"]
+simulator = ["wgpu", "winit", "embedded-graphics", "eframe", "pollster", "dep:image", "tracing-subscriber"]
 st7789 = ["embedded-hal", "display-interface", "display-interface-spi"]
 stm32h747i_disco = ["stm32h7", "embedded-hal", "stm32h7xx-hal", "cortex-m", "rlvgl-core/fs"]
 dma2d = ["stm32h7"]
 fontdue = ["rlvgl-core/fontdue"]
+png = ["rlvgl-core/png"]
+jpeg = ["rlvgl-core/jpeg"]
+gif = ["rlvgl-core/gif"]
+qrcode = ["rlvgl-core/qrcode"]
+apng = ["rlvgl-core/apng", "dep:image"]
+lottie = ["rlvgl-core/lottie"]
+canvas = ["rlvgl-core/canvas", "embedded-graphics"]
+pinyin = ["rlvgl-core/pinyin"]
+fatfs = ["rlvgl-core/fatfs"]
+nes = ["rlvgl-core/nes"]
+
+[dev-dependencies]
+base64 = "0.21"
+fatfs = "0.3"
+fscommon = "0.1"
