--- a/Cargo.toml
+++ b/Cargo.toml
@@ -236,6 +236,10 @@ rlvgl-chips-renesas = { path = "chipdb/rlvgl-chips-renesas" }
 rlvgl-chips-ti = { path = "chipdb/rlvgl-chips-ti" }
 rlvgl-chips-rp2040 = { path = "chipdb/rlvgl-chips-rp2040" }
 serde_json = "1"
+anyhow = "1"
+indexmap = { version = "2", features = ["serde"] }
+regex = "1"
+serde = { version = "1", features = ["derive"] }
 
 [features]
 default = []
