--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,22 @@
+# Project-wide Python dependencies for AFDB utilities and tooling.
+# Pinned versions ensure reproducible installs.
 certifi==2025.7.14
 charset-normalizer==3.4.2
 colorama==0.4.6
 conan==2.19.1
+defusedxml==0.7.1
 fasteners==0.19
 idna==3.10
 Jinja2==3.1.6
+jsonschema==4.23.0
 MarkupSafe==3.0.2
+orjson==3.10.1
 patch-ng==1.18.1
 pillow==11.3.0
+pydantic==2.7.4
 python-dateutil==2.9.0.post0
 PyYAML==6.0.2
 requests==2.32.4
 six==1.17.0
 urllib3==2.0.7
+zstandard==0.22.0
