ci: build full board list

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,21 +80,11 @@ jobs:
       - uses: actions/checkout@v4
       - name: Prepare build environment
         run: bash scripts/setup-ci-env.sh
-      - name: Generate board list
-        run: |
-          mkdir -p board-list/raw
-          python3 tools/afdb/st_extract_af.py --input tests/data/tools_st_extract_af/sample.ioc --output board-list/raw/SAMPLE.json --mcu-root tests/data/tools_st_extract_af/mcu
-          python3 - <<'PY'
-import json, pathlib
-p=pathlib.Path('board-list/raw/SAMPLE.json')
-d=json.loads(p.read_text())
-d.update({'board':'SAMPLE','chip':'STM32F4'})
-p.write_text(json.dumps(d))
-PY
-          python3 tools/gen_pins.py --input board-list/raw --output board-list
+      - name: Build STM32 board database
+        run: bash scripts/stm32_afdb_pipeline.sh
       - name: Upload boards.json
         uses: actions/upload-artifact@v4
         with:
           name: boards-json
-          path: board-list/boards.json
+          path: chipdb/rlvgl-chips-stm/db/boards.json
 
