--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "afdb"
 version = "0.1.0"
 requires-python = ">=3.12"
-dependencies = ["defusedxml", "pydantic>=2", "jsonschema", "orjson"]
+dependencies = ["defusedxml", "pydantic>=2", "jsonschema", "orjson", "zstandard"]
 
 [project.scripts]
 afdb = "tools.afdb.cli:main"
