--- a/chipdb/rlvgl-chips-stm/Cargo.toml
+++ b/chipdb/rlvgl-chips-stm/Cargo.toml
@@ -1,10 +1,22 @@
 # Configuration for rlvgl-chips-stm crate.
 [package]
 name = "rlvgl-chips-stm"
-version = "0.0.1"
+version = "0.1.0"
+authors = ["Ira Abbott <ira@softoboros.com>"]
 edition = "2021"
+license = "BSD-3-Clause"
+description = "STM32 Chip Database for use in code generation."
 publish = true
 readme = "README.md"
+repository = "https://github.com/softoboros/rlvgl"
+homepage = "https://github.com/softoboros/rlvgl"
+documentation = "https://docs.rs/rlvgl"
+keywords = ["embedded", "stm32", "st", "mcu", "no_std"]
+categories = ["data", "no_std", "embedded", "st", "stm32"]
+exclude = [
+  "db/mcu.json",
+  "db/boards.json",
+]
 
 [lib]
 crate-type = ["rlib"]
