--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Prepare build environment
         run: bash scripts/setup-ci-env.sh
+      - name: Install rust-lld
+        run: rustup component add rust-lld
       - run: cargo build --workspace --verbose
       - run: cargo fmt --all -- --check
       - run: cargo clippy --workspace -- -D warnings
@@ -31,6 +33,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Prepare build environment
         run: bash scripts/setup-ci-env.sh
+      - name: Install rust-lld
+        run: rustup component add rust-lld
       - name: Install target
         run: rustup target add thumbv7em-none-eabihf
       - name: Build firmware
