--- a/chips/stm/bsps/Cargo.toml
+++ b/chips/stm/bsps/Cargo.toml
@@ -1,6 +1,3 @@
-# SPDX-License-Identifier: MIT
-# rlvgl-stm-bsps crate manifest.
-
 [package]
 name = "rlvgl-stm-bsps"
 version = "0.1.0"
@@ -12,7 +9,10 @@ description = "Board support package stubs for STM32 devices."
 path = "src/lib.rs"
 
 [features]
-default = ["hal", "split"]
+default = [
+    "hal",
+    "split",
+]
 hal = []
 pac = []
 split = []
@@ -20,7 +20,3 @@ flat = []
 summaries = []
 pinreport = []
 stm32-f4 = []
-stm32-h7 = []
-stm32-l4 = []
-stm32-c0 = []
-
