--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ referencing==0.36.2
 requests==2.32.4
 rpds-py==0.27.0
 six==1.17.0
+tomli-w==1.2.0
 typing_extensions==4.14.1
 urllib3==2.0.7
 zstandard==0.22.0
