--- a/chips/stm/bsps/Cargo.toml
+++ b/chips/stm/bsps/Cargo.toml
@@ -30,4 +30,19 @@ split = []
 flat = []
 summaries = []
 pinreport = []
+stm32-c0 = []
+stm32-f0 = []
+stm32-f3 = []
 stm32-f4 = []
+stm32-f7 = []
+stm32-g0 = []
+stm32-g4 = []
+stm32-h5 = []
+stm32-h7 = []
+stm32-l0 = []
+stm32-l1 = []
+stm32-l4 = []
+stm32-l5 = []
+stm32-n6 = []
+stm32-u0 = []
+stm32-u5 = []
