--- a/Cargo.toml
+++ b/Cargo.toml
@@ -248,6 +248,7 @@ indexmap = { version = "2", features = ["serde"] }
 regex = "1"
 serde = { version = "1", features = ["derive"] }
 zstd = "0.12"
+syn = { version = "2", features = ["full"] }
 
 [features]
 default = []
